# chrysalis

./: Cargo.toml
src/: lib.rs  shared_model.rs
src/sereal/: body.rs  header.rs  mod.rs  value.rs
src/storable/: body.rs  header.rs  mod.rs  value.rs
tests/: big_specimen.rs  harmony.rs  sereal_specimen.rs  specimen.rs
tools/: big_specimen.pl  harmony.pl  sereal_specimen.pl  specimen.pl
