[package]
name = "chrysalis"
version = "0.2.0"
edition = "2024"
description = "Parsing library for Perl's Storable and Sereal serialization formats."
license = "MIT OR Apache-2.0"
repository = "https://github.com/deeksha-chitale/chrysalis"
keywords = ["perl", "storable", "sereal", "serialization", "parser"]
categories = ["parser-implementations", "encoding"]